<resources>
    <string name="app_name">Fit360</string>
    <string name="app_creation">Developed By Deelaka</string>
    <string name="btn_login">Login</string>
    <string name="btn_reg">Register</string>
    <string name="txtForgotPassword">Forgot Password</string>
    <string name="btn_next">Next</string>
    <string name="txtEmail">Email</string>
    <string name="txtPassword">Password</string>
    <string name="txtReg1">Let\'s get started!</string>
    <string name="txtReg2">I agree to the Fit360 Terms of Service. Please also read the Privacy Policy including the Cookie Use statement.</string>
    <string name="txtReg3">Keep me updated about Fit360 products.</string>
    <string name="txtReg21">Check Your Email!</string>
    <string name="txtReg22">We sent an email to:</string>
    <string name="txtReg23">123wejith@gmail.com</string>
    <string name="txtReg24">Follow the steps in the email to verify address.
    You\'ll be able to continue setting up your
    account from here
    after you verify your email address.</string>
    <string name="txtReg25">Verify Email first…</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="txtReg31">About You</string>
    <string name="txtReg32">First name</string>
    <string name="txtReg33">Last name</string>
    <string name="txtReg34">Birthday</string>
    <string name="txtReg35">Height</string>
    <string name="txtReg36">Gender</string>
    <string name="txtReg37">Weight</string>
    <string name="txtReg38">cm</string>
    <string name="txtReg39">Kg</string>
    <string name="txtReg40">Male</string>
    <string name="txtReg41">Female</string>
    <string name="txtReg42">Click here to create an account</string>
    <string name="txtReg43">Click here to Login</string>
    <string name="btnCAccount">Create An Account</string>
    <string name="txtHome1">Track Your Exercies</string>
    <string name="txtHome2">Log some water</string>
    <string name="txtHome3">Start Logging your food</string>
    <string name="txtHome4">Edit your profile : </string>
    <string name="txtHome5">Go</string>
    <string name="txtHome6">Log out</string>
    <string name="txtEditProfile1">Paul Stirling</string>
    <string name="txtEditProfile2">Sex</string>
    <string name="txtEditProfile3">Male</string>
    <string name="txtEditProfile4">Birthday</string>
    <string name="txtEditProfile5">2022/12/02</string>
    <string name="txtEditProfile6">Height</string>
    <string name="txtEditProfile7">167cm</string>
    <string name="txtEditProfile8">Weight</string>
    <string name="txtEditProfile9">75Kg</string>
    <string name="txtEditProfile10">Edit Profile</string>
    <string name="txtExercise1">Track Your Exercise</string>
    <string name="txtExercise2">Edit plan</string>
    <string name="txtExercise3">Walking</string>
    <string name="txtExercise4">Running</string>
    <string name="txtExercise5">Cycling</string>
    <string name="txtExercise6">Limit: 800 Steps</string>
    <string name="txtExercise7">Limit: 5 Km</string>
    <string name="txtExercise8">Limit: 4 Km</string>
    <string name="txtExercise9">View map</string>
    <string name="txtExercise10">Start</string>
    <string name="txtExercise11">Pause</string>
    <string name="txtExercise12">Reset</string>
    <string name="txtExercise13">Back</string>
    <string name="txtExercise14">Done</string>
    <string name="txtExercise15">Updating profile</string>
    <string name="txtExercise16">Update</string>
    <string name="txtMap1">You ran 5Km</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="waterHome1">400/2000ml</string>
    <string name="waterHome2">Daily Drink Target</string>
    <string name="waterHome3">Edit Target</string>
    <string name="waterHome4">Today\'s Record</string>
    <string name="waterHome5">0%</string>
    <string name="waterHome6">Loading...</string>
    <string name="waterHis1">Weekly completion</string>
    <string name="waterHis2">Sun</string>
    <string name="waterHis3">Mon</string>
    <string name="waterHis4">Tue</string>
    <string name="waterHis5">Wen</string>
    <string name="waterHis6">Thu</string>
    <string name="waterHis7">Fri</string>
    <string name="waterHis8">Sat</string>
    <string name="waterHis9">Drink Water Report</string>
    <string name="waterHis10">Weekly average</string>
    <string name="waterHis11">Monthly average</string>
    <string name="waterHis12">Weekly percentage</string>
    <string name="waterHis13">0ml/week</string>
    <string name="waterHis14">80%</string>
    <string name="waterHis15">Edit Week Target</string>
    <string name="waterHis16">Week Target</string>
    <string name="waterHis17">50000ml/week</string>
    <string name="foodHome1">400/2000cal</string>
    <string name="foodHome2">Daily Calories Target</string>
    <string name="foodHis1">Food\'s Calories Report</string>
    <string name="foodHis2">0cal/day</string>
    <string name="foodHis3">80%</string>
    <string name="foodHis4">0cal/week</string>
    <string name="foodHis5">50000cal/week</string>

</resources>