<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <TextView
        android:id="@+id/txtAppName6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="516dp"
        android:fontFamily="monospace"
        android:text="@string/txtReg1"
        android:textAlignment="center"
        android:textColor="@color/green"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAppName5"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txtAppName5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="544dp"
        android:fontFamily="monospace"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/teal_700"
        android:textSize="48sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEditProfile" />

    <Button
        android:id="@+id/btnExercies"
        android:layout_width="261dp"
        android:layout_height="88dp"
        android:background="@color/purple_500"
        android:text="@string/txtHome1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAppName6"
        app:layout_constraintVertical_bias="0.201" />

    <Button
        android:id="@+id/btnWater"
        android:layout_width="261dp"
        android:layout_height="88dp"
        android:background="@color/purple_700"
        android:text="@string/txtHome2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnExercies"
        app:layout_constraintVertical_bias="0.134" />

    <Button
        android:id="@+id/btnFood"
        android:layout_width="261dp"
        android:layout_height="88dp"
        android:background="#8BC34A"
        android:text="@string/txtHome3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnWater"
        app:layout_constraintVertical_bias="0.237" />

    <Button
        android:id="@+id/btnEditProfile"
        android:layout_width="21dp"
        android:layout_height="23dp"
        android:background="@android:drawable/ic_menu_edit"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.91"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.05" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtHome4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnEditProfile"
        app:layout_constraintHorizontal_bias="0.959"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.056" />

</androidx.constraintlayout.widget.ConstraintLayout>