<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditProfileActivity">

    <TextView
        android:id="@+id/txtAppName16"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:fontFamily="monospace"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/teal_700"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnELogout" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dark_green"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <Button
            android:id="@+id/btnEBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/ldark_green"
            android:text="@string/txtExercise13"
            android:textColor="@color/black"
            android:textSize="15sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.05"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.110000014" />

        <ImageView
            android:id="@+id/imgCycle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnEBack"
            app:layout_constraintVertical_bias="0.35000002"
            app:srcCompat="@drawable/ic_launcher_foreground" />

        <TextView
            android:id="@+id/txtUName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="monospace"
            android:text="@string/txtEditProfile1"
            android:textAlignment="center"
            android:textColor="@color/green"
            android:textSize="34sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imgCycle"
            app:layout_constraintVertical_bias="0.25" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/txtAppName8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif-monospace"
        android:text="@string/txtEditProfile2"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.254"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/constraintLayout12"
        app:layout_constraintVertical_bias="0.5" />

    <TextView
        android:id="@+id/txtUSex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif-monospace"
        android:text="@string/txtEditProfile3"
        android:textAlignment="center"
        android:textColor="@color/teal_700"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.64"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/constraintLayout12" />

    <TextView
        android:id="@+id/txtAppName9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif-monospace"
        android:text="@string/txtEditProfile4"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.303"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAppName8"
        app:layout_constraintVertical_bias="0" />

    <TextView
        android:id="@+id/txtUBirthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif-monospace"
        android:text="@string/txtEditProfile5"
        android:textAlignment="center"
        android:textColor="@color/teal_700"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.406"
        app:layout_constraintStart_toEndOf="@+id/txtAppName9"
        app:layout_constraintTop_toBottomOf="@+id/txtUSex"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txtAppName10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif-monospace"
        android:text="@string/txtEditProfile6"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.281"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAppName9"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txtUHeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif-monospace"
        android:text="@string/txtEditProfile7"
        android:textAlignment="center"
        android:textColor="@color/teal_700"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.35"
        app:layout_constraintStart_toEndOf="@+id/txtAppName10"
        app:layout_constraintTop_toBottomOf="@+id/txtUBirthday"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txtAppName11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="serif-monospace"
        android:text="@string/txtEditProfile8"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold|italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.281"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAppName10"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/txtUWeight"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="120dp"
        android:fontFamily="serif-monospace"
        android:text="@string/txtEditProfile9"
        android:textAlignment="center"
        android:textColor="@color/teal_700"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.876"
        app:layout_constraintStart_toEndOf="@+id/txtAppName11"
        app:layout_constraintTop_toBottomOf="@+id/txtUHeight"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btnEEditProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@color/purple_200"
        android:text="@string/txtEditProfile10"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAppName11"
        app:layout_constraintVertical_bias="0.181" />

    <Button
        android:id="@+id/btnELogout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@color/red"
        android:text="@string/txtHome6"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnEEditProfile"
        app:layout_constraintVertical_bias="0.1" />



</androidx.constraintlayout.widget.ConstraintLayout>